--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,16 @@
             app:roundedCorners="true"
             android:layout_marginTop="20dp"/>
 
+        <TextView
+            android:id="@+id/txtRecuperarSenha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Esqueceu a senha? Clique aqui!"
+            android:textColor="@color/colorWhite"
+            android:gravity="center"
+            />
+
 
     </LinearLayout>
 
