--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,8 +70,7 @@
             android:layout_marginTop="10dp"
             android:text="Esqueceu a senha? Clique aqui!"
             android:textColor="@color/colorWhite"
-            android:gravity="center"
-            />
+            android:gravity="center"/>
 
 
     </LinearLayout>
